Added create/delete api methods for managing game rooms.
